--- a/src/blog1.html
+++ b/src/blog1.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="blog1.css">
 </head>
 <body>
+    <nav>
+   
+        <ul>
+            <li><a class="active" href= "http://localhost:5500/src/home.html">HOME</a></li>
+            <li><a class="active" href= "http://localhost:5500/src/about.html">ABOUT ME</a></li>
+            <li><a class="active" href= "http://localhost:5500/src/exp.html">WORK</a></li>
+            <li><a class="active" href= "http://localhost:5500/src/bloghome.html">BLOGPOST</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <div1 id="container1">
+        <div2 class="text">
+            <h2 class="heading">Blueberry Cake</h2>
+            <img id= "d1" src="/docs/dog1.jpg" alt="dog1">
+             <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
+            </p>
+        </div2>
+    </div1>
+
+    </section>
+
+
+    <footer>
+        <div3 class="footer"> &copy; Copyright ML 2023 </div3>
+    </footer>
     
+
 </body>
 </html>
