added last blog pages and semtags

--- a/src/blog4.html
+++ b/src/blog4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog 1</title>
-    <link rel="stylesheet" href="blog1.css">
+    <title>Blog 4</title>
+    <link rel="stylesheet" href="blog4.css">
 </head>
 <body>
     <nav>
@@ -21,9 +21,9 @@
         <div1 id="container1">
         <div2 class="text">
             <header> 
-                <a href="http://localhost:5500/src/blog4.html"> <img id= "left" src="/docs/left.png" alt="left"> </a>
-                <h2 class="heading">Blueberry Cake</h2>
-                <a href="http://localhost:5500/src/blog2.html">  <img id= "right" src="/docs/right.png" alt="right"> </a>
+                <a href="http://localhost:5500/src/blog3.html"> <img id= "left" src="/docs/left.png" alt="left"> </a>
+                <h2 class="heading">Strawberry Cake</h2>
+                <a href="http://localhost:5500/src/blog1.html"> <img id= "right" src="/docs/right.png" alt="right"> </a> 
             </header>    
                 <img id= "d1" src="/docs/dog1.jpg" alt="dog1">
                 <subheading class="sub"> Ingredients </subheading>
