finished mobile pages

--- a/src/blog4.html
+++ b/src/blog4.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog 4</title>
-    <link rel="stylesheet" href="blog4.css">
+    <link rel="stylesheet" href="blog1.css">
 </head>
 <body>
+    <!-- Navigation bar -->
     <nav>
-   
         <ul>
             <li><a class="active" href= "http://localhost:5500/src/home.html">HOME</a></li>
             <li><a class="active" href= "http://localhost:5500/src/about.html">ABOUT ME</a></li>
@@ -17,29 +17,44 @@
         </ul>
     </nav>
 
+<!-- Main body -->
     <section>
         <div1 id="container1">
         <div2 class="text">
             <header> 
                 <a href="http://localhost:5500/src/blog3.html"> <img id= "left" src="/docs/left.png" alt="left"> </a>
-                <h2 class="heading">Strawberry Cake</h2>
-                <a href="http://localhost:5500/src/blog1.html"> <img id= "right" src="/docs/right.png" alt="right"> </a> 
+                <h2 class="heading">Chocolate Chestnut Cake</h2>
+                <a href="http://localhost:5500/src/blog1.html"> <img id= "right" src="/docs/right.png" alt="right"> </a>
             </header>    
-                <img id= "d1" src="/docs/dog1.jpg" alt="dog1">
+                <img id= "d1" src="/docs/choc.jpg" alt="cake4">
                 <subheading class="sub"> Ingredients </subheading>
-                <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
-                </p>
-                <subheading class="sub"> Method </subheading>
-                <p class="para2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
-                </p>
+                <ul class="para1">    
+                    <li>1 cup flour</li>
+                    <li> 1 cup flour</li>
+                    <li> 1 cup flour</li>
+                    <li> 1 cup flour</li>
+                    <li> 1 cup flour</li>
+                    <li> 1 cup flour</li>
+                    <li> 1 cup flour</li>
+                    <li> 1 cup flour</li>
+            </ul>
+            </p>
+            <subheading class="sub"> Method </subheading>
+            <ol class="para2">    
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore dicta soluta nobis quos veniam provident, voluptatem dolor repellendus rerum ipsa.</li> 
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, veniam?</li>
+                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptates ex quas ullam quam architecto?</li>
+                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis maxime cumque facere atque distinctio fugit est minima consequatur illum? Dolore minus unde exercitationem laborum hic nam, id enim dolor consectetur.</li>
+               
+        </ol>
         </div2>
     </div1>
 
     </section>
 
-
+<!-- Footer -->
     <footer>
-        <div3 class="footer"> &copy; Copyright ML 2023 </div3>
+        <div3 class="footer"> &copy; Copyright Michelle Liang 2023 </div3>
     </footer>
     
 
