--- a/src/about.html
+++ b/src/about.html
@@ -28,24 +28,24 @@
     
         <section>
             <article class="text">
-                <header class="heading">
-                    <h1>A BIT MORE ABOUT ME...</h1>  
-                    </header>
+                <header>
+                    <img  class="heading" src="/docs/abtme.png" alt="dog1"> 
+                </header>
                 <!--First body paragraph  -->
                 <h2 class="subheading">Background</h2>
  
                 <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
                 </p>
-                <img id= "d1" src="/docs/dog1.jpg" alt="dog1">
-                <img id= "d2" src="/docs/dog2.jpg" alt="dog2">
+                <img id= "d1" src="/docs/little.jpg" alt="meandsis">
+                <img id= "d2" src="/docs/shop.jpg" alt="fish">
 
                 <!-- Second body paragraph -->
                 <h2 class="subheading">Hobbies/Interests</h2>
 
                 <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
                 </p>
-                <img id= "d3" src="/docs/dog3.jpg" alt="dog3">
-                <img id= "d4" src="/docs/dog4.jpg" alt="dog4">
+                <img id= "d3" src="/docs/coffee.jpg" alt="coffee">
+                <img id= "d4" src="/docs/hike2.jpg" alt="hike">
             </article> 
         </section> 
     </main>
@@ -53,7 +53,7 @@
 
 <!-- Footer -->
     <footer>
-        <div3 class="footer"> &copy; Copyright ML 2023 </div3>
+        <div3 class="footer"> &copy; Copyright Michelle Liang 2023 </div3>
     </footer>
     
 
