--- a/src/exp.html
+++ b/src/exp.html
@@ -32,11 +32,11 @@
             </p>
            
             <h2 class="subheading">Work</h2>
-            <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
+            <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, link to my resume <a class="readlink" href="docs/resume_template.pdf">here</a>!
             </p>
 
             <h2 class="subheading">Projects</h2>
-            <p id="lastpara"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
+            <p id="lastpara"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore link to my github profile <a class="readlink" href="https://github.com/mcelle888">here</a>!
             </p>
             
         </article>
