--- a/src/about.html
+++ b/src/about.html
@@ -42,7 +42,7 @@
                 <!-- Second body paragraph -->
                 <h2 class="subheading">Hobbies/Interests</h2>
 
-                <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
+                <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, have a look at my blog <a class="readlink" href="http://localhost:5500/src/bloghome.html">here</a> to see my latest creations!
                 </p>
                 <img id= "d3" src="/docs/coffee.jpg" alt="coffee">
                 <img id= "d4" src="/docs/hike2.jpg" alt="hike">
