--- a/src/blog4.html
+++ b/src/blog4.html
@@ -10,7 +10,7 @@
     <!-- Navigation bar -->
     <nav>
         <ul>
-            <li><a class="active" href= "http://localhost:5500/src/home.html">HOME</a></li>
+            <li><a class="active" href= "http://localhost:5500/src/index.html">HOME</a></li>
             <li><a class="active" href= "http://localhost:5500/src/about.html">ABOUT ME</a></li>
             <li><a class="active" href= "http://localhost:5500/src/exp.html">WORK</a></li>
             <li><a class="active" href= "http://localhost:5500/src/bloghome.html">BLOGPOST</a></li>
@@ -22,11 +22,11 @@
         <div1 id="container1">
         <div2 class="text">
             <header> 
-                <a href="http://localhost:5500/src/blog3.html"> <img id= "left" src="/docs/left.png" alt="left"> </a>
+                <a href="http://localhost:5500/src/blog3.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
                 <h2 class="heading">Chocolate Chestnut Cake</h2>
-                <a href="http://localhost:5500/src/blog1.html"> <img id= "right" src="/docs/right.png" alt="right"> </a>
+                <a href="http://localhost:5500/src/blog1.html"> <img id= "right" src="pictures/right.png" alt="right"> </a>
             </header>    
-                <img id= "d1" src="/docs/choc.jpg" alt="cake4">
+                <img id= "d1" src="pictures/choc.jpg" alt="cake4">
                 <subheading class="sub"> Ingredients </subheading>
                 <ul class="para1">    
                     <li>1 cup flour</li>
