--- a/src/exp.html
+++ b/src/exp.html
@@ -10,7 +10,7 @@
     <!-- Navigation Links -->
 
     <ul>
-        <li><a class="active" href= "http://localhost:5500/src/home.html">HOME</a></li>
+        <li><a class="active" href= "http://localhost:5500/src/index.html">HOME</a></li>
         <li><a class="active" href= "http://localhost:5500/src/about.html">ABOUT ME</a></li>
         <li><a class="active" href= "http://localhost:5500/src/exp.html">WORK</a></li>
         <li><a class="active" href= "http://localhost:5500/src/bloghome.html">BLOGPOST</a></li>
@@ -20,13 +20,12 @@
       <!-- Main body -->
 
     <main> 
-        <div1 class="container1"> 
     
      <section>
 
         <article class="text">
             
-            <img id= "d1" src="/docs/grad.jpg" alt="dog1">
+            <img id= "d1" src="pictures/grad.jpg" alt="dog1">
             <h2 class="subheading">Education</h2>
             <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
             </p>
