--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="homestyle.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
  <!-- Navigation Bar -->
         <nav>  
         <ul>
-          <li><a class="active" href= "http://localhost:5500/src/home.html">HOME</a></li>
+          <li><a class="active" href= "http://localhost:5500/src/index.html">HOME</a></li>
           <li><a class="active" href= "http://localhost:5500/src/about.html">ABOUT ME</a></li>
           <li><a class="active" href= "http://localhost:5500/src/exp.html">WORK</a></li>
           <li><a class="active" href= "http://localhost:5500/src/bloghome.html">BLOGPOST</a></li>
@@ -20,8 +20,8 @@
 
 <!-- Main body -->
 
-  <main class="backgr"> 
-      <img id= "pfp" src="/docs/me.jpg" alt="pfp">
+  <main> 
+      <img id= "pfp" src="pictures/me.jpg" alt="pfp">
 
 
       <article>
@@ -42,16 +42,16 @@
         <p class="icons">
           
             <a id="gt" href="https://github.com/mcelle888"> 
-              <img src="/docs/github.png" alt="Github logo">
+              <img src="pictures/github.png" alt="Github logo">
             </a>
             <a id="twt" href="https://twitter.com/">
-              <img src="/docs/twt.png" alt="Twitter logo">
+              <img src="pictures/twt.png" alt="Twitter logo">
             </a>
             <a id="link" href="www.linkedin.com/in/michelle-l-68b4a2196">
-              <img src="/docs/linked.png" alt="Linkedin logo">
+              <img src="pictures/linked.png" alt="Linkedin logo">
             </a>
             <a id="mail" href="mailto: mcelle888@gmail.com">
-              <img src="/docs/email.png" alt="Email logo">
+              <img src="pictures/email.png" alt="Email logo">
             </a>
             
         </p>
