--- a/src/exp.html
+++ b/src/exp.html
@@ -25,7 +25,7 @@
 
         <article class="text">
             
-            <img id= "d1" src="pictures/grad.jpg" alt="dog1">
+            <img id= "d1" src="pictures/grad.jpg" alt="grad">
             <h2 class="subheading">Education</h2>
             <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
             </p>
