responsive design almost done

--- a/src/bloghome.html
+++ b/src/bloghome.html
@@ -27,7 +27,7 @@
                 <a class="readlink" href="http://localhost:5500/src/blog1.html">Read more</a>
             </p>
             <img class= "d1" src="pictures/berry.jpg" alt="cake2">
-            <h2 class="subheading">Berry Cake</h2>
+            <h2 class="subheading">Berry Chiffon</h2>
             <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
                 <a class="readlink" href="#http://localhost:5500/src/blog2.html">Read more</a>
             </p>
