--- a/src/about.html
+++ b/src/about.html
@@ -21,25 +21,27 @@
 <!-- Main Body -->
 
     <main>
-        <section>
         <header>
-                <img  class="heading" src="pictures/bit2.png" alt="title">  </header>
-           
+            <img  class="heading" src="pictures/bit2.png" alt="title">  </header>
+        <section>
             <!--First body paragraph  -->
             <h2 class="subheading">Background</h2>
 
             <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
             </p>
+                <article class="pict">
             <img id= "d1" src="pictures/little.jpg" alt="meandsis">
             <img id= "d2" src="pictures/shop.jpg" alt="fish">
-
+                </article>
             <!-- Second body paragraph -->
             <h2 class="subheading">Hobbies/Interests</h2>
 
             <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, have a look at my blog <a class="readlink" href="http://localhost:5500/src/bloghome.html">here</a> to see my latest creations!
             </p>
+                <article class="pict">
             <img id= "d3" src="pictures/coffee.jpg" alt="coffee">
             <img id= "d4" src="pictures/hike2.jpg" alt="hike">
+                </article>
     </section>   
         
     </main>
