finalised home page

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="pictures/home.png">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+
  <!-- Navigation Bar -->
         <nav>  
         <ul>
@@ -21,33 +23,38 @@
 <!-- Main body -->
 
   <main> 
+
+    <!-- Picture -->
       <img id= "pfp" src="pictures/me.jpg" alt="pfp">
 
-
+    <!-- Paragraphs -->
       <article>
       <p class="container1">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vero sed ad ipsa neque numquam ab quia autem quibusdam totam minima quas reiciendis quis nihil, sit iste praesentium, magnam ducimus.
+        Hello! My name is Michelle and I'm currently a student studying WebDev at Coder Academy. Welcome to my very first Assignment : Building a website! <br> <br>  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vero sed ad ipsa neque numquam ab quia autem quibusdam totam minima quas reiciendis quis nihil, sit iste praesentium, magnam ducimus. <br> <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat magnam ratione cupiditate aut quod ut error quisquam, rem reiciendis unde?
       </p>
    
-      <p class="container2">Got any questions? Or just want to start a friendly conversation? <br>
+      <p class="container2">Got any questions? Or just want to start a friendly conversation? 
+         <br>
         Contact me at: <br> <br>
         Email: smlxm08@gmail.com <br>
         Phone: 0000 000 000 <br> <br>
   
-        Or connect with me on social media below! 
+        Or connect with me on social media below! &#128516;	 
       </p>
       </article>    
-<!-- Social Media Links -->
+
+    <!-- Social Media Links -->
+
       <figure>
         <p class="icons">
           
             <a id="gt" href="https://github.com/mcelle888"> 
               <img src="pictures/github.png" alt="Github logo">
             </a>
-            <a id="twt" href="https://twitter.com/">
+            <a id="twt" href="https://twitter.com/smlxm08">
               <img src="pictures/twt.png" alt="Twitter logo">
             </a>
-            <a id="link" href="www.linkedin.com/in/michelle-l-68b4a2196">
+            <a id="link" href="https://linkedin.com/in/michelle-l-68b4a2196">
               <img src="pictures/linked.png" alt="Linkedin logo">
             </a>
             <a id="mail" href="mailto: mcelle888@gmail.com">
