--- a/src/about.html
+++ b/src/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="icon" type="image/x-icon" href="pictures/person.png">
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
