--- a/src/bloghome.html
+++ b/src/bloghome.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Home</title>
+    <link rel="icon" type="image/x-icon" href="pictures/cake.png">
     <link rel="stylesheet" href="bloghome.css">
 </head>
 <body>
