--- a/src/exp.html
+++ b/src/exp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
+    <link rel="icon" type="image/x-icon" href="pictures/work.png">
     <link rel="stylesheet" href="exp.css">
 </head>
 <body>
