responsive des done

--- a/src/about.html
+++ b/src/about.html
@@ -39,7 +39,7 @@
            
             <h2 class="subheading">Hobbies/Interests</h2>
 
-            <p class="para2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, have a look at my blog <a class="readlink" href="http://localhost:5500/src/bloghome.html">here</a> to see my latest creations!
+            <p class="para2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, have a look at my blog <a class="readlink" href="http://localhost:5500/src/bloghome.html">here</a> to see my latest creations! &#128516;
             </p>
                 <article class="pict">
             <img id= "d3" src="pictures/coffee.jpg" alt="coffee">
