--- a/src/bloghome.html
+++ b/src/bloghome.html
@@ -42,7 +42,7 @@
             
             <img class= "d1" src="pictures/choc.jpg" alt="cake4">
 
-            <h2 class="subheading">Coffee Choc Cake</h2>
+            <h2 class="subheading">Coffee Cake</h2>
             <p id="lastpara"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
                 <a class="readlink" href="#http://localhost:5500/src/blog4.html">Read more</a>
             </p>
