--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         Email: smlxm08@gmail.com <br>
         Phone: 0000 000 000 <br> <br>
   
-        Or connect with me on social media below! &#128516;	 
+        Or connect with me on social media below! 	 
       </p>
       </article>    
 
