--- a/src/blog4.html
+++ b/src/blog4.html
@@ -22,7 +22,7 @@
     <section>
             <header> 
                 <a href="http://localhost:5500/src/blog3.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
-                <h2 class="heading">Chocolate Chestnut Cake</h2>
+                <h2 class="heading">Coffee Cake</h2>
                 <a href="http://localhost:5500/src/blog1.html"> <img id= "right" src="pictures/right.png" alt="right"> </a>
             </header>    
                 <img id= "d1" src="pictures/choc.jpg" alt="cake4">
@@ -45,10 +45,8 @@
                 <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum voluptates ex quas ullam quam architecto?</li>
                 <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis maxime cumque facere atque distinctio fugit est minima consequatur illum? Dolore minus unde exercitationem laborum hic nam, id enim dolor consectetur.</li>
                
-         </ol>
-        </div2>
-    </div1>
-
+            </ol>
+       
     </section>
 
 <!-- Footer -->
