--- a/src/bloghome.html
+++ b/src/bloghome.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-
-        <ul>
-            <li><a class="active" href= "http://localhost:5500/src/index.html">HOME</a></li>
-            <li><a class="active" href= "http://localhost:5500/src/about.html">ABOUT ME</a></li>
-            <li><a class="active" href= "http://localhost:5500/src/exp.html">WORK</a></li>
-            <li><a class="active" href= "http://localhost:5500/src/bloghome.html">BLOGPOST</a></li>
-        </ul>
-
+<nav>
+    <ul>
+        <li><a class="active" href= "/src/index.html">HOME</a></li>
+        <li><a class="active" href= "about.html">ABOUT ME</a></li>
+        <li><a class="active" href= "exp.html">WORK</a></li>
+        <li><a class="active" href= "bloghome.html">BLOGPOST</a></li>
+    </ul>
+</nav>
     <!-- Main body -->
     <main>
 
