--- a/src/about.html
+++ b/src/about.html
@@ -29,7 +29,7 @@
                 
             <h2 class="subheading">Background</h2>
 
-            <p class="para1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, temporibus at! Magnam inventore aliquam vero ab delectus. Delectus, veritatis.
+            <p class="para1"> Hello! My name is Michelle and I was born and raised in Melbourne. My parents immigrated from China a few years before I was born, looking for a better life. Here they opened a Charcoal Chicken Shop and Noodle Bar which they still run to this day! I studied Commerce at University after high school. After graduating I met my wonderful fiance and we decided to try running our own business. We recently sold our Fish and Chip shop after two long hard years and now here we are!
             </p>
                 <article class="pict">
             <img id= "d1" src="pictures/little.jpg" alt="meandsis">
@@ -39,7 +39,7 @@
            
             <h2 class="subheading">Hobbies/Interests</h2>
 
-            <p class="para2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloribus saepe natus placeat eligendi aut vel assumenda enim quod laboriosam, have a look at my blog <a class="readlink" href="http://localhost:5500/src/bloghome.html">here</a> to see my latest creations! &#128516;
+            <p class="para2"> I used to spend an unhealthy amount of time on my computer playing games (hence the interest in computers and IT!) but outside my addiction I love exploring, going for hikes in the mountains and walks along beaches. I am also a coffee addict and love looking for new cafes to explore. I am a homebody and with my spare time I make cakes! Have a look at my blog <a class="readlink" href="bloghome.html">here</a> to see my latest creations &#128516;.
             </p>
                 <article class="pict">
             <img id= "d3" src="pictures/coffee.jpg" alt="coffee">
