--- a/src/blog2.html
+++ b/src/blog2.html
@@ -23,9 +23,9 @@
 
     <section>
             <header> 
-                <a href="http://localhost:5500/src/blog1.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
+                <a href="blog1.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
                 <h2 class="heading">Berry Cake</h2>
-                <a href="http://localhost:5500/src/blog3.html"> <img id= "right" src="pictures/right.png" alt="right"> </a> 
+                <a href="blog3.html"> <img id= "right" src="pictures/right.png" alt="right"> </a> 
             </header>    
                 <img id= "d1" src="pictures/berry.jpg" alt="cake2">
                 <subheading class="sub"> Ingredients </subheading>
