--- a/src/blog3.html
+++ b/src/blog3.html
@@ -22,9 +22,9 @@
     <section>
     
             <header> 
-                <a href="http://localhost:5500/src/blog2.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
+                <a href="blog2.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
                 <h2 class="heading">Coconut Cake</h2>
-                <a href="http://localhost:5500/src/blog4.html"> <img id= "right" src="pictures/right.png" alt="right"> </a>
+                <a href="blog4.html"> <img id= "right" src="pictures/right.png" alt="right"> </a>
             </header>    
                 <img id= "d1" src="pictures/coconut.jpg" alt="cake3">
                 <subheading class="sub"> Ingredients </subheading>
