--- a/src/blog4.html
+++ b/src/blog4.html
@@ -21,9 +21,9 @@
 <!-- Main body -->
     <section>
             <header> 
-                <a href="http://localhost:5500/src/blog3.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
+                <a href="blog3.html"> <img id= "left" src="pictures/left.png" alt="left"> </a>
                 <h2 class="heading">Coffee Cake</h2>
-                <a href="http://localhost:5500/src/blog1.html"> <img id= "right" src="pictures/right.png" alt="right"> </a>
+                <a href="blog1.html"> <img id= "right" src="pictures/right.png" alt="right"> </a>
             </header>    
                 <img id= "d1" src="pictures/choc.jpg" alt="cake4">
                 <subheading class="sub"> Ingredients </subheading>
