--- a/src/blog2.html
+++ b/src/blog2.html
@@ -12,7 +12,7 @@
     <!-- Navigation bar -->
     <nav>
         <ul>
-            <li><a class="active" href= "/src/index.html">HOME</a></li>
+            <li><a class="active" href= "index.html">HOME</a></li>
             <li><a class="active" href= "about.html">ABOUT ME</a></li>
             <li><a class="active" href= "exp.html">WORK</a></li>
             <li><a class="active" href= "bloghome.html">BLOGPOST</a></li>
