--- a/src/exp.html
+++ b/src/exp.html
@@ -28,11 +28,11 @@
             
             <img id= "d1" src="pictures/grad.jpg" alt="grad">
             <h2 class="subheading">Education</h2>
-            <p class="para1"> I completed high school in 2014 at St Monica's College. Shortly after, I studied a year and a half of Arts majoring in creative writing. However concerned about my job prospects for the future, I ultimately chose to switch to a Commerce degree. I graduated in 2020 with a Bachelor of Commerce (Finance and Accounting) in 2020. Currently, I'm a student studying IT and Coder Academy. <br> <br>  
+            <p class="para1"> I completed high school in 2014 at St Monica's College. Shortly after, I studied a year and a half of Arts, majoring in creative writing. However, concerned about my job prospects for the future, I ultimately chose to switch to a Commerce degree. I graduated in 2020 with a Bachelor of Commerce (Finance and Accounting) in 2020. Currently, I'm a student studying IT and Coder Academy. 
             </p>
            
             <h2 class="subheading">Work</h2>
-            <p class="para1"> Most recently, my partner and I bought a Fresh Seafood/Fish and Chips shop in Sunbury which we operated for 2 years. It was a decision made to challenge ourselves and throughout the experience we learnt a great deal on how to operate a small business. This allowed us to improve our communication skills, our ability to manage finances, manage staff and work under pressure. It was a rough experience but at the same time an experience I'm grateful for as it really accelerated my personal development. For a more extensive history of my work experience, click on a link to my resume <a class="readlink" href="pictures/resume_template.pdf">here</a>!
+            <p class="para1"> Most recently, my partner and I bought a Fresh Seafood/Fish and Chips shop in Sunbury which we operated for 2 years. It was a decision made to challenge ourselves and throughout the experience we learnt a great deal on how to operate a small business. This allowed us to improve our communication skills, our ability to manage finances, manage staff and work under pressure. It was a rough experience but at the same time an experience I'm grateful for as it really accelerated my personal growth and development. For a more extensive history of my work experience, click on a link to my resume <a class="readlink" href="pictures/resume_template.pdf">here</a>!
             </p>
 
             <h2 class="subheading">Projects</h2>
