--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <!-- Paragraphs -->
       <article>
       <p class="container1">
-        Hello! My name is Michelle and I'm currently a student studying Web Development at Coder Academy. Welcome to my very first Assignment : Building a website! <br> <br> Have a look around to learn a little more about my background, interests and future goals. Have fun!  
+        Hello! My name is Michelle and I'm currently a student studying Web Development at Coder Academy. Welcome to my very first assignment : Building a website! <br> <br> Have a look around to learn a little more about my background, interests and future goals. Have fun!  
       </p>
    
       <p class="container2">Got any questions? Or just want to start a friendly conversation? 
